# kokua_kari

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  server.js  tailwind.config.ts  vite.config.ts
backend/: address_search.py  calcrisk.py  functions.py
src/: App.tsx  index.css
src/components/: AddressConfirmation.tsx  BudgetDisplay.tsx  ChatInterface.tsx  QuestionDetail.tsx
src/components/budget/: BudgetItemList.tsx  BudgetTotal.tsx  DetailCard.tsx  DiagnosisSection.tsx  StatsCard.tsx
src/components/chat/: ChatInput.tsx  ChatMessage.tsx  DiagnosisDialogContainer.tsx  DiagnosisResultTable.tsx  MessageProcessingIndicator.tsx  NumberInput.tsx  PeopleInputForm.tsx  PeopleInputFormContainer.tsx  ProgressIndicator.tsx
src/components/chat-interface/: ChatInputSection.tsx  ChatOptionsButtons.tsx  MessageContainer.tsx
src/components/diagnosis/: ActionButtons.tsx  ChatSection.tsx  DiagnosisSection.tsx  (+1 more)
src/contexts/: AddressContext.tsx  SuppliesContext.tsx
src/data/: questionDetails.ts
src/hooks/: useAddressSearch.ts  useChatMessages.tsx  useDiagnosisDialog.tsx  useDiagnosisState.tsx  useDisasterRisk_byPython.ts  useMessageHandler.ts  useOptionHandler.ts  useOrgTypeAndPeopleInput.tsx  useProgressManager.tsx  useRecommendedStockItems.ts  useScenario.ts  useScenarioSteps.tsx  useSuppliesProcessor.ts
src/pages/: DiagnosisResult.tsx  EditProductList.tsx  Index.tsx  Landing.tsx
src/styles/: AddressConfirmation.css
src/types/: chat.ts  next.d.ts
src/utils/: orderUrl.ts  priceMapping.ts
supabase/: config.toml
(+28 files in other folders)
